# tasma

./: Cargo.toml  README.md
src/: main.rs
src/commands/: meta.rs  mod.rs  weblate.rs
