[package]
name = "tasma"
version = "0.1.0"
authors = ["Jacek Palczewski <jpalczewski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.23"
tracing-subscriber = "0.2"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }


[dependencies.tokio]
version = "1.13"
features = ["macros", "signal", "rt-multi-thread"]


[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
version = "0.10"

[dependencies.reqwest]
version = "0.11.4"
features = ["json"]